--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
- 
+ 		</div>
 
     <!-- End Left Column -->
     </div>
@@ -74,6 +74,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
             <p>MSc-R -- Physics</p>
+			<p>Hydrodynamic modelling and analytical research into the formation of stars. The research conducted aimed to find evidence for currently debated methods of mass accumulation rates in early proto stellar formation. 
             <hr>
           </div>
           <div class="w3-container">
