--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
           <p>Python</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:90%">
+            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
           <p>C++</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
           <p>IDL</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
+            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
           <p>Fortran</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:90%">
+            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
-		
- 	
+		</div>
+ 	  </div> 
 
     <!-- End Left Column -->
     </div>
