--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2016</h6>
             <p>MSc / Physics</p>
-			<p>Hydrodynamic modelling and analytical research into the formation of stars. The research conducted aimed to find evidence for currently debated methods of mass accumulation rates in early proto stellar formation. </p>
-            <hr>
+			<p>Modelling and analytical research into the formation of stars. The research conducted aimed to find evidence for currently debated methods of mass accumulation rates in early proto stellar formation. 
+			
+			Research upon star formation using a theoretical Fortran model. Found correlations and significant points of interest in data using strong analytical techniques. Research made effective comparisons between observational and theoretical data.</p>
+            
+			<hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
