Information + Download box

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>Graduate Physicist</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>Physics Graduate</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>High Wycombe, UK</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>@mail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>1224435534</p>
@@ -77,10 +77,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2016</h6>
             <p>MSc / Physics</p>
-			<p>Modelling and analytical research into the formation of stars. The research conducted aimed to find evidence for currently debated methods of mass accumulation rates in early proto stellar formation. 
-			
-			Research upon star formation using a theoretical Fortran model. Found correlations and significant points of interest in data using strong analytical techniques. Research made effective comparisons between observational and theoretical data.</p>
-            
+			<p>Research into the formation of stars using analytical techniques on data produced by a hydrodynamic Fortran model. The research conducted aimed to find evidence on currently debated methods of mass accumulation rates in early proto stellar formation. The research found correlations and significant points of interest in data using strong analytical techniques.</p>
+			<h6 class="w3-text-kent-blue"><i class="fa fa-file-pdf-os fa-fw w3-margin-right"></i>Thesis Download</h6>
 			<hr>
           </div>
           <div class="w3-container">
