--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2016</h6>
             <p>MSc / Physics</p>
 			<p>Research into the formation of stars using analytical techniques on data produced by a hydrodynamic Fortran model. The research conducted aimed to find evidence on currently debated methods of mass accumulation rates in early proto stellar formation. The research found correlations and significant points of interest in data using strong analytical techniques.</p>
-			<h6 class="w3-text-grey-blue"><i class="fa fa-file-pdf-o fa-fw w3-margin-right"></i>- Thesis Download</h6>
+			<h6 class="w3-text-blue-grey"><i class="fa fa-file-pdf-o fa-fw w3-margin-right"></i>- Thesis Download</h6>
 			<hr>
           </div>
           <div class="w3-container">
