--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2016</h6>
             <p>MSc / Physics</p>
 			<p>Research into the formation of stars using analytical techniques on data produced by a hydrodynamic Fortran model. The research conducted aimed to find evidence on currently debated methods of mass accumulation rates in early proto stellar formation. The research found correlations and significant points of interest in data using strong analytical techniques.</p>
-			<a href="./Thesis-Final.pdf" download="D-Hastie-Thesis" target="_blank"><h7 class="w3-text-blue-grey"><i class="fa fa-file-pdf-o fa-fw w3-margin-right"></i></a></h7><h7>- Thesis Download</h7>
+			<a href="./Thesis-Final.pdf" download="D-Hastie-Thesis" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg "></i></a></h7> <h7><i class="fa fa-angle-double-left"></i> Thesis Download</h7>
 			<hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2015</h6>
             <p>BSc / Physics </p>
+			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems. 
             <hr>
           </div>
           <div class="w3-container">
