--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-kent-blue"></i>Work and Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Front End Developer / w3schools.com</b></h5>
-          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-kent-blue w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>Title Here</b></h5>
+          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Date - - <span class="w3-tag w3-kent-blue w3-round">Current</span></h6>
+          <p>- Text Here - </p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Developer / something.com</b></h5>
-          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <h5 class="w3-opacity"><b>- Text Here -</b></h5>
+          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Date </h6>
+          <p>- TextHere -</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <h5 class="w3-opacity"><b>- Title Here -</b></h5>
+          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Date here</h6>
+          <p>Text Here. </p><br>
         </div>
       </div>
 
@@ -130,13 +130,13 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-kent-blue w3-center w3-margin-top">
-  <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-text-indigo w3-large"></i>
-  <i class="fa fa-instagram w3-hover-text-purple w3-large"></i>
-  <i class="fa fa-snapchat w3-hover-text-yellow w3-large"></i>
-  <i class="fa fa-pinterest-p w3-hover-text-red w3-large"></i>
-  <i class="fa fa-twitter w3-hover-text-light-blue w3-large"></i>
-  <i class="fa fa-linkedin w3-hover-text-indigo w3-large"></i>
+  <!-- <p>Find me on social media.</p> -->
+  <!-- <i class="fa fa-facebook-official w3-hover-text-indigo w3-large"></i> -->
+  <!-- <i class="fa fa-instagram w3-hover-text-purple w3-large"></i> -->
+  <!-- <i class="fa fa-snapchat w3-hover-text-yellow w3-large"></i> -->
+  <!-- <i class="fa fa-pinterest-p w3-hover-text-red w3-large"></i> -->
+  <!-- <i class="fa fa-twitter w3-hover-text-light-blue w3-large"></i> -->
+  <!-- <i class="fa fa-linkedin w3-hover-text-indigo w3-large"></i> -->
   <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
