--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
   <!-- <i class="fa fa-pinterest-p w3-hover-text-red w3-large"></i> -->
   <!-- <i class="fa fa-twitter w3-hover-text-light-blue w3-large"></i> -->
   <!-- <i class="fa fa-linkedin w3-hover-text-indigo w3-large"></i> -->
-  <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <!-- <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
 </footer>
 
 </body>
