--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <p>C++</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
-              <div class="w3-center w3-text-white">50%</div>
+              <div class="w3-center w3-text-white">30%</div>
             </div>
           </div>
           <p>IDL</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
-              <div class="w3-center w3-text-white">50%</div>
+              <div class="w3-center w3-text-white">60%</div>
             </div>
           </div>
           <p>Fortran</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
-              <div class="w3-center w3-text-white">50%</div>
+              <div class="w3-center w3-text-white">60%</div>
             </div>
           </div>
 		  <br>
@@ -85,13 +85,13 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2015</h6>
             <p>BSc / Physics </p>
-			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems. 
+			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems.
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>School of Coding</b></h5>
-            <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-            <p>Bachelor Degree</p><br>
+            <h5 class="w3-opacity"><b>Misbourne School</b></h5>
+            <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2003 - 2010</h6>
+            <p>Secondary Education</p><br>
           </div>
         </div>
 		
