--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>Physics Graduate</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>High Wycombe, UK</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>@mail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>1224435534</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>dh429@kent.ac.uk</p>
+          <!-- <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-kent-blue"></i>1224435534</p> -->
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
@@ -85,7 +85,8 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2015</h6>
             <p>BSc / Physics </p>
-			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems.
+			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems. Each year had an acompanying laboratory module involving recreating renowned experiments and to produce professional scientific reports detailing the results.<p>
+				<a href="./ModuleBreakdown" download="D-Hastie-Modules" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg "></i></a></h7> <h7><i class="fa fa-angle-double-left"></i> Module Breakdown</h7>
             <hr>
           </div>
           <div class="w3-container">
