--- a/index.html
+++ b/index.html
@@ -36,13 +36,28 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
-          <p>Python</p>
-          <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
-              <div class="w3-center w3-text-white">50%</div>
-            </div>
-          </div>
-          <p>C++</p>
+          <!-- <p>Python</p> -->
+          <div class="w3-display-container">
+            <img src="./Python-Logo.png" alt="Python-Logo" align="middle" height="42">
+			</div>
+		</br>
+           <div class="w3-display-container">
+              <img src="./cplusplus-Logo.jpeg" alt="Cplusplus-Logo" align="middle" height="42">
+  			</div>
+        </br>
+			<div class="w3-display-container">
+              <img src="./Fortran-Logo.png" alt="Fortran-Logo" align="middle" height="42">
+  			</div>
+		</br>
+			<div class="w3-display-container">
+              <img src="./IDL-Logo.png" alt="IDL-Logo" align="middle" height="42">
+  			</div>
+          <!-- <div class="w3-progress-container w3-round-xlarge w3-small"> -->
+            <!-- <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%"> -->
+              <!-- <div class="w3-center w3-text-white">50%</div> -->
+            <!-- </div> -->
+          <!-- </div> -->
+          <!-- <p>C++</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:30%">
               <div class="w3-center w3-text-white">30%</div>
@@ -59,7 +74,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
-          </div>
+          </div> -->
 		  <br>
 		</div>
  	  </div> 
@@ -101,9 +116,10 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-kent-blue"></i>Work and Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Title Here</b></h5>
-          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Date - - <span class="w3-tag w3-kent-blue w3-round">Current</span></h6>
-          <p>- Text Here - </p>
+          <h5 class="w3-opacity"><b>Barista - Pantry (Café)</b></h5>
+          <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i> 2012 - 2015</h6> <!-- <span class="w3-tag w3-kent-blue w3-round">Current</span></h6> -->
+          <p> A fast paced position requiring team skills including clear verbal communication to accomplish tasks efficiently. <br />
+The position required intuition fulfil the roles as needs fluctuated. </p>
           <hr>
         </div>
         <div class="w3-container">
