--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
           <!-- <p>Python</p> -->
           <div class="w3-display-container">
-            <img src="./python-Logo.png" alt="Python-Logo" align="middle" height="42">
+            <img src="./python-logo.png" alt="Python-Logo" align="middle" height="42">
 			</div>
 		</br>
            <div class="w3-display-container">
