--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
-          <!-- <p>Python</p> -->
-          <div class="w3-display-container">
+          <p>Python</p>
+          <!-- <div class="w3-display-container">
             <img src="./python-logo.png" alt="Python-Logo" align="middle" height="42">
 			</div>
 		</br>
@@ -51,13 +51,13 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		</br>
 			<div class="w3-display-container">
               <img src="./IDL-logo.png" alt="IDL-Logo" align="middle" height="42">
-  			</div>
-          <!-- <div class="w3-progress-container w3-round-xlarge w3-small"> -->
-            <!-- <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%"> -->
-              <!-- <div class="w3-center w3-text-white">50%</div> -->
-            <!-- </div> -->
-          <!-- </div> -->
-          <!-- <p>C++</p>
+  			</div> -->
+          <div class="w3-progress-container w3-round-xlarge w3-small">
+            <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
+              <div class="w3-center w3-text-white">50%</div>
+            </div>
+          </div>
+          <p>C++</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:30%">
               <div class="w3-center w3-text-white">30%</div>
@@ -74,7 +74,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
-          </div> -->
+          </div>
 		  <br>
 		</div>
  	  </div> 
