--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
-          <p>C++</p>
+          <p>C++ &emsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to my C++ Github </h7> </p>
+		 
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:30%">
               <div class="w3-center w3-text-white">30%</div>
