--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2015</h6>
             <p>BSc / Physics </p>
 			<p>A comprehensive course covering the many aspects of physics from thermodynamics to space systems. Each year had an acompanying laboratory module involving recreating renowned experiments and to produce professional scientific reports detailing the results.<p>
-				<a href="./ModuleBreakdown" download="D-Hastie-Modules" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg "></i></a></h7> <h7><i class="fa fa-angle-double-left"></i> Module Breakdown</h7>
+				<a href="./D-Hastie-Modules.pdf" download="D-Hastie-Modules" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg "></i></a></h7> <h7><i class="fa fa-angle-double-left"></i> Module Breakdown</h7>
             <hr>
           </div>
           <div class="w3-container">
