Added Link to python Project

--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
-          <p>Python &emsp; <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-ex"></i> Link to my C++ Github </h7> </p>
+		  <p>Python &emsp; <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link one of my Python Projects</h7> </p>
+		  
+          <!-- <div class="w3-display-container">
+            <img src="./python-logo.png" alt="Python-Logo" align="middle" height="42">
+			</div>
+		</br>
+           <div class="w3-display-container">
+              <img src="./cplusplus-Logo.jpeg" alt="Cplusplus-Logo" align="middle" height="42">
+  			</div>
+        </br>
+			<div class="w3-display-container">
+              <img src="./Fortran-Logo.png" alt="Fortran-Logo" align="middle" height="42">
+  			</div>
+		</br>
+			<div class="w3-display-container">
+              <img src="./IDL-logo.png" alt="IDL-Logo" align="middle" height="42">
+  			</div> -->
+          <div class="w3-progress-container w3-round-xlarge w3-small">
+            <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
+              <div class="w3-center w3-text-white">50%</div>
+            </div>
           </div>
-          <p> C++ &emsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to my C++ Github </h7> </p>
+          <p>C++ &emsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to my C++ Github </h7> </p>
 		 
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:30%">
