--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		  <li> Successfully completed admin tasks including; returns and repairs audits, daily handovers and, repairs tracking. </li>
   		</ul>
           <hr>
-      
+       </div>
       </div>
 
     <!-- End Right Column -->
