--- a/index.html
+++ b/index.html
@@ -53,30 +53,30 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			<div class="w3-display-container">
               <img src="./IDL-logo.png" alt="IDL-Logo" align="middle" height="42">
   			</div> -->
-          <div class="w3-progress-container w3-round-xlarge w3-small">
+          <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
-          </div>
+          </div> -->
           <p>C++ &emsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to my C++ Github </h7> </p>
 		 
-          <div class="w3-progress-container w3-round-xlarge w3-small">
+          <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:30%">
               <div class="w3-center w3-text-white">30%</div>
             </div>
-          </div>
-          <p>IDL</p>
-          <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
-              <div class="w3-center w3-text-white">50%</div>
-            </div>
-          </div>
+          </div> -->
           <p>Fortran</p>
-          <div class="w3-progress-container w3-round-xlarge w3-small">
+          <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
-          </div>
+          </div> -->
+          <p>LaTeX</p>
+          <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
+            <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
+              <div class="w3-center w3-text-white">50%</div>
+            </div>
+          </div> -->
 		  <br>
 		</div>
  	  </div> 
@@ -161,19 +161,19 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
        <div class="w3-display-container mySlides">	 
    	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14726409_334440503592277_5149806516802420736_n.jpg" style="width:100%"></script>
          <div class="w3-display-topleft w3-container w3-padding-32">
-           <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum</span>
+           <span class="w3-white w3-padding-large w3-animate-bottom">Paris</span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
         <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/11939539_1483170971983224_1984147973_n.jpg"style="width:100%">
-         <div class="w3-display-middle w3-container w3-padding-32">
-           <span class="w3-white w3-padding-large w3-animate-bottom">Klorim tipsum</span>
+         <div class="w3-display-topleft w3-container w3-padding-32">
+           <span class="w3-white w3-padding-large w3-animate-bottom"> </span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
      	  <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14072870_986763214783120_1860181155_n.jpg" style ="width:100%">
-         <div class="w3-display-topright w3-container w3-padding-32">
-           <span class="w3-white w3-padding-large w3-animate-bottom">Blorum pipsum</span>
+         <div class="w3-display-topleft w3-container w3-padding-32">
+           <span class="w3-white w3-padding-large w3-animate-bottom">Shoreditch</span>
          </div>
        </div>
 
