--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</b></p>
-		  <p>Python &emsp; <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to one of my Python Projects</h7> </p>
+		  <p><i class="fa fa-chevron-circle-right"></i> Python &emsp; <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to a Python Project</h7> </p>
 		  
           <!-- <div class="w3-display-container">
             <img src="./python-logo.png" alt="Python-Logo" align="middle" height="42">
@@ -58,20 +58,20 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div> -->
-          <p>C++ &emsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to my C++ Github </h7> </p>
+          <p><i class="fa fa-chevron-circle-right"></i> C++ &emsp; <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square"></i></a></h7> <h7><i class="fa fa-angle-double-left"></i>Link to my C++ Github </h7> </p>
 		 
           <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:30%">
               <div class="w3-center w3-text-white">30%</div>
             </div>
           </div> -->
-          <p>Fortran</p>
+          <p> <i class="fa fa-chevron-circle-right"></i> Fortran</p>
           <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div> -->
-          <p>LaTeX</p>
+          <p><i class="fa fa-chevron-circle-right"></i> LaTeX</p>
           <!-- <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-kent-blue" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
