--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		 
           <p><h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran</h6></p>
 		  
-          <p><h6><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; <a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"> <h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a></h7> <h7></i> CV written in LaTeX</h7> </h6></p></h6></p>
+          <p><h6><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; <a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"> <h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a></h7> <h7></i> CV written in LaTeX</h7> </h6></p>
 		
 		  
           <hr>
@@ -203,6 +203,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
        </div>
     <!--End slideshow container -->
   	 </div>
+	 
 	<!-- End Right Column -->
 	</div>
 <!--End right Column -->
@@ -223,8 +224,6 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
   <!-- <i class="fa fa-linkedin w3-hover-text-indigo w3-large"></i> -->
   <!-- <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
 </footer>
-
-
 
 <script>
 // Slideshow
@@ -256,10 +255,10 @@ function showDivs(n) {
 }
 </script>
 
-</body>
-</html>
 
 
 </body>
 </html>
+
+
 
