Removed conflicting header class in table tds. Replaced with Font

--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <hr style="margin-top:-5px">
 		  
 		  <table style="margin-top-10px">
-			  <tr>
+			  <tr class="spaceUnder">
 				  <th><i class="fa fa-code-fork w3-xlarge fa-fw w3-margin-right w3-text-kent-blue"></i>Languages</th>
 			  </tr>
-			  <tr>
+			  <tr class="spaceUnder">
 				  <td>
-					  <h6> <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; </h6>
+					  <font size="+1"> <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; </font>
 				  </td>
 				  <td>
-					  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <i class="fa fa-external-link-square w3-text-kent-blue"></i> </a> <h7 class="w3-text-grey"> Python Project </h7>
+					  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <i class="fa fa-external-link-square w3-text-kent-blue"></i> </a> <font size="-1" class="w3-text-grey"> Python Project </font>
 				  </td>
 			 </tr>
-			 <tr>
+			 <tr class="spaceUnder">
 				 <td>
-					 <h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp; </h6>
+					 <font size="+1"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp; </font>
 				 </td>
 				 <td>
-					 <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><h7 class="w3-text-kent-blue"><i class="fa fa-external-link-square w3-text-kent-blue"></i> </h7></a> <h7> C++ Projects </h7>
-				 </td>
-			 </tr>
-			 <tr>
-				 <td>
-					 <h6><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; </h6>
-				 </td>
-				 <td>
-					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"> <h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a></h7> <h7></i> CV written in LaTeX</h7> </h6> 
+					 <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><font size ="-1" class="w3-text-kent-blue"><i class="fa fa-external-link-square w3-text-kent-blue"></i> </font> </a> <font size="-1"> C++ Projects </font>
 				 </td>
 			 </tr>
-			 <tr>
+			 <tr class="spaceUnder">
 				 <td>
-					 <h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran </h6>
+					 <font size="+1"><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; </font>
+				 </td>
+				 <td>
+					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"> <font size="-1" class="w3-text-kent-blue"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a></font> <font size="-1"></i> CV written in LaTeX</font> </h6> 
+				 </td>
+			 </tr>
+			 <tr class="spaceUnder">
+				 <td>
+					 <font size="+1"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran </font>
 				 </td>
 				 <td>
 				 </td>
