Removed obsolete Font

--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 			  </tr>
 			  <tr class="spaceUnder">
 				  <td>
-					  <font size="+0"> <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; </font>
+					 <i class="fa fa-chevron-right w3-text-kent-blue"> </i> Python &nbsp; &nbsp; 
 				  </td>
 				  <td>
-					  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <i class="fa fa-external-link-square w3-text-kent-blue"></i> </a> <font size="-1" class="w3-text-grey"> Python Project </font>
+					  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker"> <i class="fa fa-external-link-square w3-text-kent-blue"></i> </a>  Python Project
 				  </td>
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td>
-					 <font size="+0"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp; </font>
+					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> C++ &nbsp; &nbsp;
 				 </td>
 				 <td>
-					 <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><font size ="-1" class="w3-text-kent-blue"><i class="fa fa-external-link-square w3-text-kent-blue"></i> </font> </a> <font size="-1"> C++ Projects </font>
-				 </td>
-			 </tr>
-			 <tr class="spaceUnder">
-				 <td>
-					 <font size="+0"><i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; </font>
-				 </td>
-				 <td>
-					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"> <font size="-1" class="w3-text-kent-blue"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a></font> <font size="-1"></i> CV written in LaTeX</font> </h6> 
+					 <a href="https://github.com/D-Hastie/EulerProblems" target="github.com/D-Hastie/EulerProblems"><i class="fa fa-external-link-square w3-text-kent-blue"></i> </a> C++ Projects
 				 </td>
 			 </tr>
 			 <tr class="spaceUnder">
 				 <td>
-					 <font size="+0"> <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran </font>
+					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; 
+				 </td>
+				 <td>
+					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a> </i> CV written in LaTeX 
+				 </td>
+			 </tr>
+			 <tr class="spaceUnder">
+				 <td>
+					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> Fortran
 				 </td>
 				 <td>
 				 </td>
