--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 					 <i class="fa fa-chevron-right w3-text-kent-blue"></i> LaTeX  &nbsp; &nbsp; 
 				 </td>
 				 <td style="font-size:13px">
-					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a> </i> CV written in LaTeX 
+					<a href="./D-Hastie-Curriculum-Vitae.pdf" download="D-Hastie-Curriculum-Vitae.pdf" target="_blank"><i class="fa fa-file-pdf-o w3-text-kent-blue"></i></a>  CV written in LaTeX 
 				 </td>
 			 </tr>
 			 <tr class="spaceUnder">
@@ -80,9 +80,9 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		  
           <hr style="margin-top:-5px">
           <p class="w3-large" style="margin-top:-10px"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Software &amp; Systems</b></p>
-		  <p style="margin-top:-10px"><h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  Linux, OSX, Windows </h6> </p>
-		  <p><h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MS Office Appications </h6> </p>
-		  <p><h6> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MatLab </h6> </p>
+		  <p style="margin-top:-10px; font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  Linux, OSX, Windows  </p>
+		  <p style="font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MS Office Appications </p>
+		  <pstyle="font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MatLab  </p>
 		</div>
  	  </div> 
 
