--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <p class="w3-large" style="margin-top:-10px"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-kent-blue"></i>Software &amp; Systems</b></p>
 		  <p style="margin-top:-10px; font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  Linux, OSX, Windows  </p>
 		  <p style="font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MS Office Appications </p>
-		  <pstyle="font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MatLab  </p>
+		  <p style="font-size:17px"> <i class="fa fa-chevron-right w3-text-kent-blue"></i>  MatLab  </p>
 		</div>
  	  </div> 
 
@@ -98,7 +98,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
           <div class="w3-container">
             <h5 class="w3-opacity"><b>University of Kent, Canterbury </b></h5>
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2015 - 2016</h6>
-            <h6 class="w3-text-grey"><p>MSc / Physics</p>
+            <h6 class="w3-text-grey">MSc / Physics</h6>
 			<p>Research into the formation of stars using analytical techniques on data produced by a hydrodynamic Fortran model. The research is centred around modelling different accretion scenarios in early proto stellar formation and to find any difference in evolutionary tracks across a range of stellar masses. The research is incremental to pre-existing code and offered novel techniques in making comparisons between modelled and observational data. The research employed multiple analytical tools to find correlation and points of significant interest. </p></h6>
 			<a href="./Thesis-Final.pdf" download="D-Hastie-Thesis" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg "></i></a></h7>   <h7 class="w3-text-grey"> Thesis Download </h7>
 			<hr>
