Changes to be best practice HTML

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
             <h6 class="w3-text-kent-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011 - 2015</h6>
             <h6 class="w3-text-grey">BSc / Physics</h6> 
 			<p class="w3-text-grey">A comprehensive course covering the many aspects of physics from thermodynamics to space systems. Each year had an acompanying laboratory module involving replicating renowned experiments and producing professional scientific reports detailing the results. Final exams focused on testing problem solving ability and adapting fundamental physics to diverse scenarios. The exams often required incorporating knowledge and techniques from other fields of physics.  </p>
-			<a href="./D-Hastie-Modules.pdf" download="D-Hastie-Modules" target="_blank"><h7 class="w3-text-kent-blue"><i class="fa fa-file-pdf-o fa-lg"></i></a></h7>  <h7 class="w3-text-grey"> Module Breakdown </h7>
+			<a href="./D-Hastie-Modules.pdf" download="D-Hastie-Modules" target="_blank" class="w3-text-kent-blue" style="font-size:13px"><i class="fa fa-file-pdf-o"></i></a>  <span class="w3-text-grey" style="font-size:13px"> Module Breakdown </span>
             <hr>
           </div>
           <div class="w3-container">	
