Changes to be best practice HTML

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
 		  <li> Discipline and critical thinking is necessity to ensure time is used efficiently</li>
 		  <li> Intuition and previous experience is used to determine a products true value and profitability.</li>
 		  <li> In a move to improve efficiency and automate repetitive tasks, a python script using the amazon API was developed. The automation tracks and evaluates products, allowing time to be focused on finding new products.</li>
-		  <li>  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker" class="w3-text-kent-blue" style="font-size:13px"><i class="fa fa-external-link-square"></i></a> <span style="font-size:13px" class="w3-text-grey"> Link to python program.</space> </li> 
+		  <li>  <a href="https://github.com/D-Hastie/AmazonTracker" target="github.com/D-Hastie/AmazonTracker" class="w3-text-kent-blue" style="font-size:13px"><i class="fa fa-external-link-square"></i></a> <span style="font-size:13px" class="w3-text-grey"> Link to python program.</span> </li> 
           </ul>  
           <hr>
 	  	</div>
@@ -191,26 +191,26 @@ html,body,h1,h2,h3,h4,h5,h6,h7 {font-family: "Roboto", sans-serif}
          </div>
        </div>
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/12142732_1019867828033675_248088834_n.jpg"style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/12142732_1019867828033675_248088834_n.jpg" style="width:100%">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> Rome</span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14726409_334440503592277_5149806516802420736_n.jpg"style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14726409_334440503592277_5149806516802420736_n.jpg" style="width:100%">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> Paris</span>
          </div>
        </div>
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14052602_1749051612010256_5850889855482986496_n.jpg"style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/14052602_1749051612010256_5850889855482986496_n.jpg" style="width:100%">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> King's Boulevard</span>
          </div>
        </div>
 	   
        <div class="w3-display-container mySlides">
-        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/11939539_1483170971983224_1984147973_n.jpg"style="width:100%">
+        <img src="https://scontent.cdninstagram.com/t51.2885-15/e35/11939539_1483170971983224_1984147973_n.jpg" style="width:100%">
          <div class="w3-display-topleft w3-container w3-padding-32">
            <span class="w3-white w3-padding-large w3-animate-bottom"> Mid-day </span>
          </div>
